Consistent support for the 'plaintext' builds

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -19,7 +19,7 @@ REVELATION\\
 {%
 \vspace*{\stretch{0.1}}
 \subsubtitlefontsize
-The British Study Edition of the Urantia Papers\tunemarkuptwo{nofnt}{\\[2ex]}{%
+The British \tunemarkuptwo{nofnt}{Text}{Study} Edition of the Urantia Papers\tunemarkuptwo{nofnt}{\\[2ex]}{%
 ,\\
 With \totalnfnsts\ Notes, Index \&\ \totalfigures\ Illustrations\\
 \tunemarkup{bible}{%
@@ -36,13 +36,13 @@ Edited by Tigran Aivazian\\[2ex]
 %\ifvoliii Volume III: Papers 129--196\\\fi
 \fi
 \vspace*{\stretch{0.4}}
-\includegraphics[width=\phoenixscale\columnwidth]{images/Phoenix-Logo-Circles.jpg}\\
+\tunemarkuptwo{nofnt}{}{\includegraphics[width=\phoenixscale\columnwidth]{images/Phoenix-Logo-Circles.jpg}\\}
 \vspace*{\stretch{0.3}}
 \titlesepbig\\
 \vspace*{\stretch{0.1}}
 \end{center}
 
-\titleframe
+\tunemarkuptwo{nofnt}{}{\titleframe}
 
 \newpage
 
@@ -62,10 +62,10 @@ The latest version of this book can be downloaded from:\\
 Please send all comments to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\[1ex]
 \tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2021 under Linux.\\
 English text set in {\bfseries\tunemarkup{garamond}{Adobe }\urantiamainfont\tunemarkup{garamond}{ Opticals}} at \urantiamainfontsize pt.\\
-Hebrew text set in \textbf{\hebrewfontname}.\\
-Greek text set in \textbf{\greekfontname}.\\
-Armenian text set in \textbf{Tarumian GrqiBardzr}.\\
-Chinese text set in \textbf{\chinesefontname}.\\[10pt]
+\tunemarkuptwo{nofnt}{}{Hebrew text set in \textbf{\hebrewfontname}.\\}
+\tunemarkuptwo{nofnt}{}{Greek text set in \textbf{\greekfontname}.\\}
+\tunemarkuptwo{nofnt}{}{Armenian text set in \textbf{Tarumian GrqiBardzr}.\\}
+\tunemarkuptwo{nofnt}{}{Chinese text set in \textbf{\chinesefontname}.\\[10pt]}
 \upshape\bfseries
 PDF type: \pdftype\\
 PDF date: \mytoday{}\\
@@ -73,4 +73,4 @@ PDF date: \mytoday{}\\
 \vspace*{\stretch{0.1}}
 \end{center}
 
-\titleframe
+\tunemarkuptwo{nofnt}{}{\titleframe}
