--- a/tex/p011.tex
+++ b/tex/p011.tex
@@ -37,7 +37,7 @@
 \vs p011 4:1 The central Isle ends abruptly at the periphery, but its size is so enormous that this terminal angle is relatively indiscernible within any circumscribed area. The peripheral surface of Paradise is occupied, in part, by the landing and dispatching fields for various groups of spirit personalities. Since the nonpervaded\hyp{}space zones nearly impinge upon the periphery, all personality transports destined to Paradise land in these regions. Neither upper nor nether Paradise is approachable by transport supernaphim or other types of space traversers.
 \vs p011 4:2 The Seven Master Spirits have their personal seats of power and authority on the seven spheres of the Spirit, which circle about Paradise in the space between the shining orbs of the Son and the inner circuit of the Havona worlds, but they maintain force\hyp{}focal headquarters on the Paradise periphery. Here the slowly circulating presences of the Seven Supreme Power Directors indicate the location of the seven flash stations for certain Paradise energies going forth to the seven superuniverses.
 \vs p011 4:3 Here on peripheral Paradise are the enormous historic and prophetic exhibit areas assigned to the Creator Sons, dedicated to the local universes of time and space. There are just seven trillion of these historic reservations now set up or in reserve, but these arrangements all together occupy only about 4\% of that portion of the peripheral area thus assigned. We infer that these vast reserves belong to creations sometime to be situated beyond the borders of the present known and inhabited seven superuniverses.
-\vs p011 4:4 That portion of Paradise which has been designated for the use of the existing universes is occupied only 1\%--4\%, while the area assigned to these activities is at least 1,000,000 times that actually required for such purposes. Paradise is large enough to accommodate the activities of an almost infinite creation.
+\vs p011 4:4 That portion of Paradise which has been designated for the use of the existing universes is occupied only 1\%--4\%, while the area assigned to these activities is at least a million times that actually required for such purposes. Paradise is large enough to accommodate the activities of an almost infinite creation.
 \vs p011 4:5 But a further attempt to visualize to you the glories of Paradise would be futile. You must wait, and ascend while you wait, for truly, “Eye has not seen, nor ear heard, neither has it entered into the mind of mortal man, the things which the Universal Father has prepared for those who survive the life in the flesh on the worlds of time and space.”
 \usection{Nether Paradise}
 \vs p011 5:1 Concerning nether Paradise, we know only that which is revealed; personalities do not sojourn there. It has nothing whatever to do with the affairs of spirit intelligences, nor does the Deity Absolute there function. We are informed that all physical\hyp{}energy and cosmic\hyp{}force circuits have their origin on nether Paradise, and that it is constituted as follows:
