Use fractions for "8 1/5"

--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -111,7 +111,7 @@
 \vs p015 6:16 The laws of physical\hyp{}energy behaviour are basically universal, but local influences have much to do with the physical conditions which prevail on individual planets and in local systems. An almost endless variety of creature life and other living manifestations characterizes the countless worlds of space. There are, however, certain points of similarity in a group of worlds associated in a given system, while there also is a universe pattern of intelligent life. There are physical relationships among those planetary systems which belong to the same physical circuit, and which closely follow each other in the endless swing around the circle of universes.
 \usection{The Architectural Spheres}
 \vs p015 7:1 While each superuniverse government presides near the centre of the evolutionary universes of its space segment, it occupies a world made to order and is peopled by accredited personalities. These headquarters worlds are architectural spheres, space bodies specifically constructed for their special purpose. While sharing the light of near\hyp{}by suns, these spheres are independently lighted and heated. Each has a sun which gives forth light without heat, like the satellites of Paradise, while each is supplied with heat by the circulation of certain energy currents near the surface of the sphere. These headquarters worlds belong to one of the greater systems situated near the astronomical centre of their respective superuniverses.
-\vs p015 7:2 \pc Time is standardized on the headquarters of the superuniverses. The standard day of the superuniverse of Orvonton is equal to almost 30 days of Urantia time, and the Orvonton year equals 100 standard days. This Uversa year is standard in the 7\ts{th} superuniverse, and it is 22 minutes short of 3,000 days of Urantia time, about 8.2 of your years.
+\vs p015 7:2 \pc Time is standardized on the headquarters of the superuniverses. The standard day of the superuniverse of Orvonton is equal to almost 30 days of Urantia time, and the Orvonton year equals 100 standard days. This Uversa year is standard in the 7\ts{th} superuniverse, and it is 22 minutes short of 3,000 days of Urantia time, about 8\,\bibfrac{1}{5} of your years.
 \vs p015 7:3 \pc The headquarters worlds of the seven superuniverses partake of the nature and grandeur of Paradise, their central pattern of perfection. In reality, all headquarters worlds are paradisiacal. They are indeed heavenly abodes, and they increase in material size, morontia beauty, and spirit glory from Jerusem to the central Isle. And all the satellites of these headquarters worlds are also architectural spheres.
 \vs p015 7:4 The various headquarters worlds are provided with every phase of material and spiritual creation. All kinds of material, morontial, and spiritual beings are at home on these rendezvous worlds of the universes. As mortal creatures ascend the universe, passing from the material to the spiritual realms, they never lose their appreciation for, and enjoyment of, their former levels of existence.
 \vs p015 7:5 \pc \bibemph{Jerusem,} the headquarters of your local system of Satania, has its seven worlds of transition culture, each of which is encircled by seven satellites, among which are the seven mansion worlds of morontia detention, man’s first postmortal residence. As the term heaven has been used on Urantia, it has sometimes meant these seven mansion worlds, the first mansion world being denominated the 1\ts{st} heaven, and so on to the 7\ts{th}.
