Use words for digits

--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -132,7 +132,7 @@
 \vs p042 10:1 The endless sweep of relative cosmic reality,\fnst{In 1955 text no comma after ``reality''.} from the absoluteness of Paradise monota to the absoluteness of space potency, is suggestive of certain evolutions of relationship in the nonspiritual realities of the First Source and Centre --- those realities which are concealed in space potency, revealed in monota, and provisionally disclosed on intervening cosmic levels. This eternal cycle of energy, being circuited in the Father of universes, is absolute and, being absolute, is expansile in neither fact nor value; nevertheless the Primal Father is even now --- as always --- self\hyp{}realizing of an ever\hyp{}expanding arena of time\hyp{}space, and of time\hyp{}space\hyp{}transcended, meanings, an arena of changing relationships wherein energy\hyp{}matter is being progressively subjected to the overcontrol of living and divine spirit through the experiential striving of living and personal mind.
 \vs p042 10:2 The universal nonspiritual energies are reassociated in the living systems of non\hyp{}Creator minds on various levels, certain of which may be depicted as follows:
 \vs p042 10:3 \ublistelem{1.}\bibnobreakspace \bibemph{Preadjutant\hyp{}spirit minds.} This level of mind is nonexperiencing and on the inhabited worlds is ministered by the Master Physical Controllers. This is mechanical mind, the nonteachable intellect of the most primitive forms of material life, but the nonteachable mind functions on many levels beside that of primitive planetary life.
-\vs p042 10:4 \ublistelem{2.}\bibnobreakspace \bibemph{Adjutant\hyp{}spirit minds.} This is the ministry of a local universe Mother Spirit functioning through her seven adjutant mind\hyp{}spirits on the teachable (nonmechanical) level of material mind. On this level material mind is experiencing: as subhuman (animal) intellect in the first 5 adjutants; as human (moral) intellect in the seven adjutants; as superhuman (midwayer) intellect in the last 2 adjutants.
+\vs p042 10:4 \ublistelem{2.}\bibnobreakspace \bibemph{Adjutant\hyp{}spirit minds.} This is the ministry of a local universe Mother Spirit functioning through her seven adjutant mind\hyp{}spirits on the teachable (nonmechanical) level of material mind. On this level material mind is experiencing: as subhuman (animal) intellect in the first five adjutants; as human (moral) intellect in the seven adjutants; as superhuman (midwayer) intellect in the last two adjutants.
 \vs p042 10:5 \ublistelem{3.}\bibnobreakspace \bibemph{Evolving morontia minds ---} the expanding consciousness of evolving personalities in the local universe ascending careers. This is the bestowal of the local universe Mother Spirit in liaison with the Creator Son. This mind level connotes the organization of the morontia type of life vehicle, a synthesis of the material and the spiritual which is effected by the Morontia Power Supervisors of a local universe. Morontia mind functions differentially in response to the 570 levels of morontia life, disclosing increasing associative capacity with the cosmic mind on the higher levels of attainment. This is the evolutionary course of mortal creatures, but mind of a nonmorontia order is also bestowed by a Universe Son and a Universe Spirit upon the nonmorontia children of the local creations.
 \vs p042 10:6 \pc \bibemph{The cosmic mind.} This is the sevenfold diversified mind of time and space, one phase of which is ministered by each of the Seven Master Spirits to one of the seven superuniverses. The cosmic mind encompasses all finite\hyp{}mind levels and co\hyp{}ordinates experientially with the evolutionary\hyp{}deity levels of the Supreme Mind and transcendentally with the existential levels of absolute mind --- the direct circuits of the Conjoint Actor.
 \vs p042 10:7 On Paradise, mind is absolute; in Havona, absonite; in Orvonton, finite. Mind always connotes the presence\hyp{}activity of living ministry plus varied energy systems, and this is true of all levels and of all kinds of mind. But beyond the cosmic mind it becomes increasingly difficult to portray the relationships of mind to nonspiritual energy. Havona mind is subabsolute but superevolutionary; being existential\hyp{}experiential, it is nearer the absonite than any other concept revealed to you. Paradise mind is beyond human understanding; it is existential, nonspatial, and nontemporal. Nevertheless, all of these levels of mind are overshadowed by the universal presence of the Conjoint Actor --- by the mind\hyp{}gravity grasp of the God of mind on Paradise.
