Add a note on the distribution of Havona worlds.

--- a/tex/p014.tex
+++ b/tex/p014.tex
@@ -17,7 +17,7 @@
 \vs p014 1:6 \ublistelem{5.}\bibnobreakspace The second unique space zone dividing the two space paths of the dark gravity bodies.
 \vs p014 1:7 \ublistelem{6.}\bibnobreakspace The outer belt of dark gravity bodies, revolving clockwise around Paradise.
 \vs p014 1:8 \ublistelem{7.}\bibnobreakspace A third space zone --- a semiquiet zone --- separating the outer belt of dark gravity bodies from the innermost circuits of the seven superuniverses.
-\vs p014 1:9 \pc The billion worlds of Havona are arranged in seven concentric circuits immediately surrounding the three circuits of Paradise satellites. There are upwards of 35,000,000 worlds in the innermost Havona circuit and over 245,000,000 in the outermost, with proportionate numbers intervening\fnst{The number of worlds (in millions) on the $k$\ts{th} circuit is $N_k=35k$, since $N_1=35, N_7=245, \sum\limits_{k=1}^7 35k=980\approx1000$.}. Each circuit differs, but all are perfectly balanced and exquisitely organized, and each is pervaded by a specialized representation of the Infinite Spirit, one of the Seven Spirits of the Circuits. In addition to other functions this impersonal Spirit co\hyp{}ordinates the conduct of celestial affairs throughout each circuit.
+\vs p014 1:9 \pc The billion worlds of Havona are arranged in seven concentric circuits immediately surrounding the three circuits of Paradise satellites. There are upwards of 35,000,000 worlds in the innermost Havona circuit and over 245,000,000 in the outermost, with proportionate numbers intervening\fnst{One possible distribution of the worlds (in millions) on the $k$\ts{th} circuit is given by the following neat formula: $N_k=35k + (-1)^k + 3$, which gives $N_1=37>35, N_7=247>245, \sum\limits_{k=1}^7 N_k=1000$. This distribution has the property of: $(N_{k+1}-N_{k-1})/2=35=const$, but does not satisfy the condition of proportionality in any mathematically acceptable sense (geometric, harmonic or arithmetic). It comes the closest to the arithmetic mean, but is never equal to it: $(N_{k+1}+N_{k-1})/2=N_k-2(-1)^k \neq N_k$. To find a more suitable form of $N_k$ we need to satisfy the following boundary and totalling constraints: $N_1=35+\epsilon, N_7=245+\delta, \sum\limits_{k=1}^7 N_k=1000, \epsilon>0, \delta>0$ to which we should add the condition of proportionality: $N_k=f(N_{k+1},N_{k-1})$, where $f(a,b)$ is a function which determines what kind of average is selected to provide the \emph{proportionality} between the numbers of worlds on the three consecutive circuits. In principle $f(a,b)$ could be any function which satisfies the four \emph{Kolmogorov's Axioms} for a generalised mean (also known as ``quasi\hyp{}arithmetic mean''), but we restrict our attention here to the three particular types abovementioned. If we restrict the values of $\epsilon$ and $\delta$ thus: $0<\epsilon<2, 0<\delta<2$, then it is possible to show (using Wolfram Mathematica) that there exists \emph{no} solution for the following three types of $f(a,b)$: a) arithmetic mean $f(a,b)=(a+b)/2$, b) geometric mean $f(a,b)=\sqrt{ab}$, c) harmonic mean $f(a,b)=2ab/(a+b)$. If, however, the upper limits on $\epsilon$ and $\delta$ are relaxed to allow up to 3 million worlds (minus 1) excess on the 1\ts{st} and the 7\ts{th} circuits: $0<\epsilon<3, 0<\delta<3$, then there exists a solution with the simplest form of average $f(a,b)=(a+b)/2$ in the form of arithmetic progression: $N_k=\lambda k + \mu, \lambda=35-\mu+(20+21\mu)/28, \epsilon=(20+21\mu)/28, \delta=-245+\mu+7(35-\mu+(20+21\mu)/28)$ with the parameter $\mu$ taking any value in the range $8/3<\mu<64/21$. Note that this solution implies a slightly higher excess (e.g. $N_1\approx37.7$) than the solution proposed at the beginning of this footnote, but it has the advantage of providing strict \emph{proportionality} as demanded by the text.}. Each circuit differs, but all are perfectly balanced and exquisitely organized, and each is pervaded by a specialized representation of the Infinite Spirit, one of the Seven Spirits of the Circuits. In addition to other functions this impersonal Spirit co\hyp{}ordinates the conduct of celestial affairs throughout each circuit.
 \vs p014 1:10 The Havona planetary circuits are not superimposed; their worlds follow each other in an orderly linear procession. The central universe whirls around the stationary Isle of Paradise in one vast plane, consisting of ten concentric stabilized units --- the three circuits of Paradise spheres and the seven circuits of Havona worlds. Physically regarded, the Havona and the Paradise circuits are all one and the same system; their separation is in recognition of functional and administrative segregation.
 \vs p014 1:11 \pc Time is not reckoned on Paradise; the sequence of successive events is inherent in the concept of those who are indigenous to the central Isle. But time is germane to the Havona circuits and to numerous beings of both celestial and terrestrial origin sojourning thereon. Each Havona world has its own local time, determined by its circuit. All worlds in a given circuit have the same length of year since they uniformly swing around Paradise, and the length of these planetary years decreases from the outermost to the innermost circuit.
 \vs p014 1:12 Besides Havona\hyp{}circuit time, there is the Paradise\hyp{}Havona standard day and other time designations which are determined on, and are sent out from, the seven Paradise satellites of the Infinite Spirit. The Paradise\hyp{}Havona standard day is based on the length of time required for the planetary abodes of the first or inner Havona circuit to complete one revolution around the Isle of Paradise; and though their velocity is enormous, owing to their situation between the dark gravity bodies and gigantic Paradise, it requires almost 1,000 years for these spheres to complete their circuit. You have unwittingly read the truth when your eyes rested on the statement “A day is as a thousand years with God, as but a watch in the night.” One Paradise\hyp{}Havona day is just 7 minutes, 3\,\bibfrac{1}{8} seconds less than 1,000 years of the present Urantia leap\hyp{}year calendar.
