Use the word "three" for "3"

--- a/tex/p158.tex
+++ b/tex/p158.tex
@@ -20,7 +20,7 @@
 \vs p158 1:7 As they partook of their meagre evening meal, Peter asked the Master, “How long do we remain on this mountain away from our brethren?” And Jesus answered: \textcolour{ubdarkred}{“Until you shall see the glory of the Son of Man and know that whatsoever I have declared to you is true.”} And they talked over the affairs of the Lucifer rebellion while seated about the glowing embers of their fire until darkness drew on and the apostles’ eyes grew heavy, for they had begun their journey very early that morning.
 \vs p158 1:8 When the three had been fast asleep for about half an hour, they were suddenly awakened by a near\hyp{}by crackling sound, and much to their amazement and consternation, on looking about them, they beheld Jesus in intimate converse with two brilliant beings clothed in the habiliments of the light of the celestial world. And Jesus’ face and form shone with the luminosity of a heavenly light. These three conversed in a strange language, but from certain things said, Peter erroneously conjectured that the beings with Jesus were Moses and Elijah; in reality, they were Gabriel and the Father Melchizedek. The physical controllers had arranged for the apostles to witness this scene because of Jesus’ request.
 \vs p158 1:9 The three apostles were so badly frightened that they were slow in collecting their wits, but Peter, who was first to recover himself, said, as the dazzling vision faded from before them and they observed Jesus standing alone: “Jesus, Master, it is good to have been here. We rejoice to see this glory. We are loath to go back down to the inglorious world. If you are willing, let us abide here, and we will erect three tents, one for you, one for Moses, and one for Elijah.” And Peter said this because of his confusion, and because nothing else came into his mind at just that moment.
-\vs p158 1:10 While Peter was yet speaking, a silvery cloud drew near and overshadowed the four of them. The apostles now became greatly frightened, and as they fell down on their faces to worship, they heard a voice, the same that had spoken on the occasion of Jesus’ baptism, say: “This is my beloved Son; give heed to him.” And when the cloud vanished, again was Jesus alone with the 3, and he reached down and touched them, saying: \textcolour{ubdarkred}{“Arise and be not afraid; you shall see greater things than this.”} But the apostles were truly afraid; they were a silent and thoughtful trio as they made ready to descend the mountain shortly before midnight.
+\vs p158 1:10 While Peter was yet speaking, a silvery cloud drew near and overshadowed the four of them. The apostles now became greatly frightened, and as they fell down on their faces to worship, they heard a voice, the same that had spoken on the occasion of Jesus’ baptism, say: “This is my beloved Son; give heed to him.” And when the cloud vanished, again was Jesus alone with the three, and he reached down and touched them, saying: \textcolour{ubdarkred}{“Arise and be not afraid; you shall see greater things than this.”} But the apostles were truly afraid; they were a silent and thoughtful trio as they made ready to descend the mountain shortly before midnight.
 \usection{Coming down the Mountain}
 \vs p158 2:1 For about half the distance down the mountain not a word was spoken. Jesus then began the conversation by remarking: \textcolour{ubdarkred}{“Make certain that you tell no man, not even your brethren, what you have seen and heard on this mountain until the Son of Man has risen from the dead.”} The three apostles were shocked and bewildered by the Master’s words, \textcolour{ubdarkred}{“until the Son of Man has risen from the dead.”} They had so recently reaffirmed their faith in him as the Deliverer, the Son of God, and they had just beheld him transfigured in glory before their very eyes, and now he began to talk about \textcolour{ubdarkred}{“rising from the dead”!}
 \vs p158 2:2 Peter shuddered at the thought of the Master’s dying --- it was too disagreeable an idea to entertain --- and fearing that James or John might ask some question relative to this statement, he thought best to start up a diverting conversation and, not knowing what else to talk about, gave expression to the first thought coming into his mind, which was: “Master, why is it that the scribes say that Elijah must first come before the Messiah shall appear?” And Jesus, knowing that Peter sought to avoid reference to his death and resurrection, answered: \textcolour{ubdarkred}{“Elijah indeed comes first to prepare the way for the Son of Man, who must suffer many things and finally be rejected. But I tell you that Elijah has already come, and they received him not but did to him whatsoever they willed.”} And then did the three apostles perceive that he referred to John the Baptist as Elijah. Jesus knew that, if they insisted on regarding him as the Messiah, then must John be the Elijah of the prophecy.
