Added explanation note to 11:3.1

--- a/tex/p011.tex
+++ b/tex/p011.tex
@@ -29,7 +29,7 @@
 \vs p011 2:10 It appears to us that the First Source and Centre has concentrated all absolute potential for cosmic reality in Paradise as a part of his technique of self\hyp{}liberation from infinity limitations, as a means of making possible subinfinite, even time\hyp{}space, creation. But it does not follow that Paradise is time\hyp{}space limited just because the universe of universes discloses these qualities. Paradise exists without time and has no location in space.
 \vs p011 2:11 Roughly: space seemingly originates just below nether Paradise; time just above upper Paradise. Time, as you understand it, is not a feature of Paradise existence, though the citizens of the central Isle are fully conscious of nontime sequence of events. Motion is not inherent on Paradise; it is volitional. But the concept of distance, even absolute distance, has very much meaning as it may be applied to relative locations on Paradise. Paradise is nonspatial; hence its areas are absolute and therefore serviceable in many ways beyond the concept of mortal mind.
 \usection{Upper Paradise}
-\vs p011 3:1 On upper Paradise there are three grand spheres of activity, the \bibemph{Deity presence,} the \bibemph{Most Holy Sphere,} and the \bibemph{Holy Area.} The vast region immediately surrounding the presence of the Deities is set aside as the Most Holy Sphere and is reserved for the functions of worship, trinitization, and high spiritual attainment. There are no material structures nor purely intellectual creations in this zone; they could not exist there. It is useless for me to undertake to portray to the human mind the divine nature and the beauteous grandeur of the Most Holy Sphere of Paradise. This realm is wholly spiritual, and you are almost wholly material. A purely spiritual reality is, to a purely material being, apparently nonexistent.
+\vs p011 3:1 On upper Paradise there are three grand spheres of activity, the \bibemph{Deity presence,} the \bibemph{Most Holy Sphere,} and the \bibemph{Holy Area.} The vast region immediately surrounding the presence of the Deities\fnst{The ``Deity presence'' indicates the presence of the \bibemph{one} undivided Paradise Trinity, whereas the ``presence of the Deities'' points to the dwelling places of the \bibemph{three} individual existential deities: Universal Father, Eternal Son and Infinite Spirit. In effect, this simply means that the \bibemph{home} of each existential Deity and the \bibemph{office} of their corporate organisation as Trinity is the same place.} is set aside as the Most Holy Sphere and is reserved for the functions of worship, trinitization, and high spiritual attainment. There are no material structures nor purely intellectual creations in this zone; they could not exist there. It is useless for me to undertake to portray to the human mind the divine nature and the beauteous grandeur of the Most Holy Sphere of Paradise. This realm is wholly spiritual, and you are almost wholly material. A purely spiritual reality is, to a purely material being, apparently nonexistent.
 \vs p011 3:2 While there are no physical materializations in the area of the Most Holy, there are abundant souvenirs of your material days in the Holy Land sectors and still more in the reminiscent historic areas of peripheral Paradise.
 \vs p011 3:3 The Holy Area, the outlying or residential region, is divided into seven concentric zones. Paradise is sometimes called “the Father’s House” since it is his eternal residence, and these seven zones are often designated “the Father’s Paradise mansions.” The inner or first zone is occupied by Paradise Citizens and the natives of Havona who may chance to be dwelling on Paradise. The next or second zone is the residential area of the natives of the seven superuniverses of time and space. This second zone is in part subdivided into seven immense divisions, the Paradise home of the spirit beings and ascendant creatures who hail from the universes of evolutionary progression. Each of these sectors is exclusively dedicated to the welfare and advancement of the personalities of a single superuniverse, but these facilities are almost infinitely beyond the requirements of the present seven superuniverses.
 \vs p011 3:4 Each of the seven sectors of Paradise is subdivided into residential units suitable for the lodgement headquarters of 1,000,000,000 glorified individual working groups. One thousand of these units constitute a division. One hundred thousand divisions equal one congregation. Ten million congregations constitute an assembly. One billion assemblies make one grand unit. And this ascending series continues through the 2\ts{nd} grand unit, the 3\ts{rd}, and so on to the 7\ts{th} grand unit. And seven of the grand units make up the master units, and seven of the master units constitute a superior unit; and thus by sevens the ascending series expands through the superior, supersuperior, celestial, supercelestial, to the supreme units. But even this does not utilize all the space available. This staggering number of residential designations on Paradise, a number beyond your concept, occupies considerably less than 1\% of the assigned area of the Holy Land. There is still plenty of room for those who are on their way inward, even for those who shall not start the Paradise climb until the times of the eternal future.
